contrast issues

--- a/survey.css
+++ b/survey.css
@@ -11,7 +11,7 @@ h1 {
 }
 
 #outer-form {
-  background-color: #ffffff;
+  background-color: #f8f8f8;
   margin: 0 auto;
   border-radius: 4px;
   width: 75%;
@@ -36,6 +36,7 @@ input,
   flex-direction: column;
   align-self: center;
   justify-self: center;
+  background-color: #e7e7e7
 }
 
 hr {
